--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "convex": "^1.28.0",
     "next": "16.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.0.0",
