--- a/package.json
+++ b/package.json
@@ -13,12 +13,24 @@
   },
   "dependencies": {
     "@auth/core": "0.37.0",
+    "@bprogress/next": "^3.2.12",
     "@convex-dev/auth": "^0.0.90",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.0.0",
@@ -33,6 +45,7 @@
     "npm-run-all2": "^5.0.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "pnpm": {
