--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "convex": "^1.28.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
